--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.1</version>
   <description>ROS2 Node for LiDAR Tracker</description>
   <maintainer email="drajin.cho@bosornd.com">Yong Jin, Cho</maintainer>
-  <license>Apache 2.0 License</license>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
